@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
-<!-- generated by wxGlade 0.6.3 on Mon Mar 30 20:55:21 2009 -->
+<!-- generated by wxGlade 0.6.3 on Thu May 14 22:49:14 2009 -->
 
-<application path="/home/matts/svn/genx/trunk/genx/genx_gui.py" name="app" class="MyApp" option="0" language="python" top_window="main_frame" encoding="UTF-8" use_gettext="0" overwrite="0" use_new_namespace="1" for_version="2.6" is_template="0">
+<application path="/home/matts/Programming/genx/trunk/genx/genx_gui.py" name="app" class="MyApp" option="0" language="python" top_window="main_frame" encoding="UTF-8" use_gettext="0" overwrite="0" use_new_namespace="1" for_version="2.6" is_template="0">
     <object class="MainFrame" name="main_frame" base="EditFrame">
         <style>wxCAPTION|wxCLOSE_BOX|wxMINIMIZE_BOX|wxMAXIMIZE|wxMAXIMIZE_BOX|wxSYSTEM_MENU|wxRESIZE_BORDER</style>
         <icon>code:img.getgenxBitmap()</icon>
@@ -138,6 +138,12 @@
                         <help_str>Copy the parameter grid</help_str>
                         <handler>eh_mb_copy_table</handler>
                     </item>
+                    <item>
+                        <label>&amp;Find/Replace...\tCtrl+F</label>
+                        <name>mb_findreplace</name>
+                        <help_str>Find and replace in the script</help_str>
+                        <handler>eh_mb_findreplace</handler>
+                    </item>
                     <menu name="" label="Data">
                         <item>
                             <label>&amp;New data set\tAlt+N</label>
@@ -235,6 +241,13 @@
                         <help_str>Sets autoscale on when plotting</help_str>
                         <checkable>1</checkable>
                         <handler>eh_mb_view_autoscale</handler>
+                    </item>
+                    <item>
+                        <label>Use Toggle Show</label>
+                        <name>use_toggle_show</name>
+                        <help_str>Set if the plotted data shold be toggled or selcted by the mouse</help_str>
+                        <checkable>1</checkable>
+                        <handler>eh_mb_view_use_toggle_show</handler>
                     </item>
                 </menu>
                 <menu name="mb_fit" label="Fit">
